--- a/backend/deployments/docker-compose.yml
+++ b/backend/deployments/docker-compose.yml
@@ -33,6 +33,7 @@ services:
 
   postgres:
     image: postgres:latest
+    container_name: postgresql
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
@@ -44,9 +45,21 @@ services:
     networks:
       - kafka-network
 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    networks:
+      - kafka-network
+    
+
 volumes:
   kafka-data:
   postgres-data:
+  redis-data:
 
 networks:
   kafka-network:
