--- a/backend/deployments/docker-compose.yml
+++ b/backend/deployments/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -28,6 +27,14 @@ services:
       CLUSTER_ID: "4MPoN00RRm2hoxRagGaZwA"
     volumes:
       - ./data:/var/lib/kafka/data 
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 2G
+        reservations:
+          cpus: '0.5'
+          memory: 1G
     networks:
       - kafka-network
 
@@ -42,6 +49,14 @@ services:
       - "5432:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 1G
+        reservations:
+          cpus: '0.25'
+          memory: 512M
     networks:
       - kafka-network
 
@@ -51,9 +66,18 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - redis-data:/data
+      - ./redis-data:/data
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
     networks:
       - kafka-network
+    restart: unless-stopped
     
 
 volumes:
