--- a/backend/deployments/docker-compose.yml
+++ b/backend/deployments/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       KAFKA_MIN_INSYNC_REPLICAS: 1
       CLUSTER_ID: "4MPoN00RRm2hoxRagGaZwA"
     volumes:
-      - ./data:/var/lib/kafka/data 
+      - ./kafka-data:/var/lib/kafka/data 
     deploy:
       resources:
         limits:
