--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       KAFKA_MIN_INSYNC_REPLICAS: 1
       CLUSTER_ID: "4MPoN00RRm2hoxRagGaZwA"
     volumes:
-      - ./kafka-data:/var/lib/kafka/data 
+      - ./kafka-data:/var/lib/kafka
     deploy:
       resources:
         limits:
@@ -48,7 +48,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql
     deploy:
       resources:
         limits:
