--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -27,14 +27,14 @@ services:
       CLUSTER_ID: "4MPoN00RRm2hoxRagGaZwA"
     volumes:
       - ./kafka-data:/var/lib/kafka
-    deploy:
-      resources:
-        limits:
-          cpus: '1.0'
-          memory: 2G
-        reservations:
-          cpus: '0.5'
-          memory: 1G
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: '1.0'
+    #       memory: 2G
+    #     reservations:
+    #       cpus: '0.5'
+    #       memory: 1G
     networks:
       - kafka-network
 
@@ -49,14 +49,14 @@ services:
       - "5432:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 1G
-        reservations:
-          cpus: '0.25'
-          memory: 512M
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: '0.5'
+    #       memory: 1G
+    #     reservations:
+    #       cpus: '0.25'
+    #       memory: 512M
     networks:
       - kafka-network
 
@@ -67,14 +67,14 @@ services:
       - "6379:6379"
     volumes:
       - ./redis-data:/data
-    deploy:
-      resources:
-        limits:
-          cpus: '0.50'
-          memory: 512M
-        reservations:
-          cpus: '0.25'
-          memory: 256M
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: '0.50'
+    #       memory: 512M
+    #     reservations:
+    #       cpus: '0.25'
+    #       memory: 256M
     networks:
       - kafka-network
     restart: unless-stopped
