--- a/backend/configs/local.yaml
+++ b/backend/configs/local.yaml
@@ -3,7 +3,7 @@ storage_path: "./storage/storage.db"
 migrations_path: "./migrations"
 
 http_server:
-  address: "localhost:8888"
+  address: "0.0.0.0:8888"
   timeout: 4s
   idle_timeout: 60s
 
